# demo-user-role

./: pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: app.py
src/adapter/: data.py  maria_role_repository.py  maria_user_repository.py
src/application/: __init__.py  basic.py  role_handler.py  user_handler.py
src/application/input/: base.py  create_role_input.py  create_user_input.py  delete_role_input.py  delete_user_input.py  update_role_permission_input.py  update_user_role_input.py
src/domain/aggregates/: role.py  user.py
src/domain/entities/role/: data_subject.py  table.py
src/domain/entities/user/: role.py
src/usecase/: create_role.py  create_user.py  delete_role.py  delete_user.py  update_role_permission.py  update_user_role.py
src/usecase/interfaces/: role_repository.py  user_repository.py
