[project]
name = "user-role-service"
version = "0.1.0"
description = "A user and role management system using SQLAlchemy and FastAPI"
authors = [
    { name="Your Name", email="your@email.com" }
]
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "sqlalchemy>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5",
    "typing-extensions>=4.5",
    "result>=0.10.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "pytest>=7.4",
    "mypy>=1.5",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
